--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,8 +37,8 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         script: |
           cd /home/ubuntu/my-node-api
-          sudo docker-compose down
-          docker-compose up -d --scale app=3
+          sudo docker compose down
+          sudo docker compose up -d --scale app=3
       env:
           DOCKER_HOST: ${{ secrets.DOCKER_HOST }}
           SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
