--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
         script: |
           cd /home/ubuntu/my-node-api
           sudo docker compose down
-          sudo docker compose up -d --scale app=3
+          sudo docker compose up -d
       env:
           DOCKER_HOST: ${{ secrets.DOCKER_HOST }}
           SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
