--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,15 @@
-events:
-  worker_connections: 1000
+events {
+    worker_connections 1000;
+}
 
-http:
-  server:
-    listen: 8080
-    server_name: 35.173.232.206  # Specify your server name here
-    location: /
-    proxy_pass: http://app:3000
+http {
+    server {
+        listen 8080;
+        server_name 35.173.232.206;  # Specify your server name here
+
+        location / {
+            proxy_pass http://app:3000;
+        }
+    }
+}
 
