--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,7 @@ events {
 http {
     server {
         listen 8080;
-        server_name 35.173.232.206;  # Specify your server name here
+        server_name app;  # Specify your server name here
 
         location / {
             proxy_pass http://app:3000;
