--- a/nginx.conf
+++ b/nginx.conf
@@ -4,8 +4,8 @@ events {
 
 http {
     server {
-        listen 8080;
-        server_name app;  # Specify your server name here
+        listen 80;
+        #server_name app;  # Specify your server name here
 
         location / {
             proxy_pass http://app:3000;
